<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp"
    >
    <TextView
        android:id="@+id/txt_confirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_konfirmasi"
        android:fontFamily="@font/poppins_bold"
        android:textSize="18sp"
        android:textColor="@color/new_black"
        android:layout_marginBottom="28sp"/>
    <TextView
        android:id="@+id/txt_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_tarif"
        android:textSize="14sp"
        android:textColor="@color/new_black"
        android:fontFamily="@font/poppins_regular"/>
    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tarif"
        android:textColor="@color/new_black"
        android:textSize="24sp"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginBottom="32dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_red"
            android:text="@string/btn_batal"
            android:textColor="@color/new_white"
            android:textAllCaps="false"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_beli"
            android:background="@drawable/rectangle_blue"
            android:textColor="@color/new_white"
            android:textAllCaps="false"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>