<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Homepage"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_homepage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="95dp"
        android:layout_marginHorizontal="32dp"
        android:text="@string/txt_berhasil"
        android:fontFamily="@font/poppins_bold"
        android:textSize="24sp"
        android:gravity="center"
        android:textColor="@color/new_black"/>
    <ImageView
        android:id="@+id/img_verified"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:src="@drawable/baseline_verified_24"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"/>
    <TextView
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="32dp"
        android:text="@string/info_nama"
        android:fontFamily="@font/poppins_bold"
        android:textSize="18sp"
        android:textColor="@color/new_black"/>
    <TextView
        android:id="@+id/user_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="32dp"
        android:text="@string/info_jam"
        android:fontFamily="@font/poppins_bold"
        android:textSize="18sp"
        android:textColor="@color/new_black"/>
    <TextView
        android:id="@+id/user_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="32dp"
        android:text="@string/info_tanggal"
        android:fontFamily="@font/poppins_bold"
        android:textSize="18sp"
        android:textColor="@color/new_black"/>
    <TextView
        android:id="@+id/user_destination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="32dp"
        android:text="@string/info_tujuan"
        android:fontFamily="@font/poppins_bold"
        android:textSize="18sp"
        android:textColor="@color/new_black"/>

</LinearLayout>
