<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center">
    <TextView
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="@color/new_black"
        android:fontFamily="@font/poppins_bold"/>
    <LinearLayout
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:padding="12dp"
        android:background="@drawable/rectangle_white"
        android:orientation="horizontal"
        android:layout_marginHorizontal="32dp">
        <ImageView
            android:id="@+id/img_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/round_person_24" />
        <EditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nama"
            android:inputType="text"
            android:textColor="@color/gray"
            android:textSize="16sp"
            android:background="@null"
            android:layout_marginLeft="12dp"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/poppins_regular"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:padding="12dp"
        android:background="@drawable/rectangle_white"
        android:orientation="horizontal"
        android:layout_marginHorizontal="32dp">
        <ImageView
            android:id="@+id/img_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/round_access_time_24" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/edt_jam"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="12dp"
            android:background="@null"
            android:fontFamily="@font/poppins_regular"
            android:gravity="start"
            android:text="@string/jam"
            android:textAllCaps="false"
            android:textColor="@color/gray"
            android:textSize="16sp"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:padding="12dp"
        android:background="@drawable/rectangle_white"
        android:orientation="horizontal"
        android:layout_marginHorizontal="32dp">
        <ImageView
            android:id="@+id/img_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/round_calendar_month_24" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/edt_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="12dp"
            android:background="@null"
            android:fontFamily="@font/poppins_regular"
            android:gravity="start"
            android:text="@string/tanggal"
            android:textAllCaps="false"
            android:textColor="@color/gray"
            android:textSize="16sp"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/destination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:padding="12dp"
        android:background="@drawable/rectangle_white"
        android:orientation="horizontal"
        android:layout_marginHorizontal="32dp">
        <ImageView
            android:id="@+id/img_destination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/outline_location_on_24" />
        <Spinner
            android:id="@+id/edt_spinner_destination"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:background="@drawable/rectangle_blue"
        android:text="@string/pesan"
        android:textSize="14sp"
        android:textAllCaps="false"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/white"
        android:layout_marginBottom="24dp"/>



</LinearLayout>